# p2p-next-word-predictor

./: .gitignore  CITATION.cff  NWP_Report.docx  README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT.md  CODE_MAP.md  IMPROVEMENTS.md  README.md  app_config.md
notebook/: NWP_Training_Notebook_v11.5_old.ipynb  NWP_Training_Notebook_v11_5.ipynb  NWP_Training_Notebook_v12 (1).ipynb  lstm_weights (3).json
nwp_v12/: README.md  __main__.py  requirements.txt
nwp_v12/Data/: README.md  lstm_weights_placeholder.json  seed_corpus.txt
nwp_v12/FL/: __init__.py  federated_sync.py  gossip.py  training_agent.py
nwp_v12/Frontend/: app.js  index.html  styles.css
nwp_v12/Server/: __init__.py  app.py  db.py  db_migrations.py  model_registry.py  peer_discovery.py  settings.py  ws.py
nwp_v12/Server/dl_module/: __init__.py  cache_agent.py  hashing.py  hybrid_model.py  personalization.py  redact.py  trie_model.py
